# stampy

./: .gitignore  default.nix  flake.nix  pyproject.toml  python-packages.nix  stam.py
modules/: module.py
old/database/: factoids.db
