[tool.poetry]
name = "stampy"
version = "0.1.0"
description = ""
authors = ["Producer Matt <58014742+ProducerMatt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
