[tool.poetry]
name = "stampy"
version = "0.1.0"
description = ""
authors = ["Producer Matt <58014742+ProducerMatt@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
lxml = "^4.9.3"
black = "^23.3.0"
"discord.py" = "^2.3.1"
Flask = "^2.3.2"
GitPython = "^3.1.31"
google-api-python-client = "^2.92.0"
google-auth-oauthlib = "^1.0.0"
jellyfish = "^1.0.0"
openai = "^0.27.8"
psutil = "^5.9.5"
python-dotenv = "^1.0.0"
slack-sdk = "^3.21.3"
structlog = "^23.1.0"
transformers = "^4.30.2"
pandas = "^2.0.3"
codaio = "^0.6.10"
helicone = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
